# binf

./: .gitignore  Cargo.toml  LICENSE  README.md
.forgejo/workflows/: ci-tests.yml
.github/workflows/: ci-tests.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: flag_utils.rs  lib.rs  macros.rs  test.rs  tests.rs
tests/: container.rs  tests.rs
