[package]
name = "binf"
version = "1.1.2"
edition = "2021"
license = "MIT"
description = "A crate that adds utilities for dealing with binary flags"
authors = ["DavidOnTop <me@davidon.top>"]
readme = "README.md"
repository = "https://git.davidon.top/binf.git"
documentation = "https://docs.rs/binf"

[workspace]
members = [
	"macros"
]

[dependencies]
binf_macros = { version = "1.1.1", path = "macros" }
